# fontlab-mcp-server

./: .gitignore  FONTLAB_API_RESEARCH.md  LICENSE  PHASE_3_SPECIALIZED_FEATURES.md  PHASE_4_PATH_MANIPULATION.md  QUICK_WINS_IMPLEMENTATION.md  README.md  SECURITY_TODO.md  pyproject.toml
src/: __init__.py  fontlab_bridge.py  resources.py  server.py  tools.py
src/utils/: __init__.py  validation.py
